--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <option value="blue">Blue</option>
             <option value="indigo">Indigo</option>
             <option value="violet">Violet</option>
+            <option value="black">Black</option>
+            <option value="white">White</option>
         </select>
     </div>
 
